<resources>
    <string name="app_name">Humanitarni SMS</string>

    <string name="search_hint">Pretraga humanitarnih akcija</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Podešavanja</string>
    <string name="action_refresh">Osveži</string>
    <string name="search_dialog_button">Pretraga</string>
    <string name="about_button">O aplikaciji</string>
    <string name="stats_button">Statistika</string>

    <string name="settings_activity_label">Podešavanja</string>

    <string name="service_settings_screen_key">service_screen_pref</string>
    <string name="service_settings_screen_title">Podešavanje servisa</string>
    <string name="service_ip_key">service_ip_pref</string>
    <string name="service_ip_title">Adresa servisa</string>
    <string name="service_ip_default">192.168.0.103</string>

    <string name="user_settings_screen_key">user_settings_pref</string>
    <string name="user_settings_screen_title">Korisnički podaci</string>
    <string name="user_data_enabled_key">user_data_enabled_pref</string>
    <string name="user_data_enabled_title">Šalji korisničke podatke</string>
    <string name="user_email_key">user_email_pref</string>
    <string name="user_email_title">E-mail korisnika</string>
    <string name="user_name_key">user_name_pref</string>
    <string name="user_name_title">Ime i prezime</string>

    <string name="title_activity_search">Pretraga</string>
    <string name="title_activity_donate">Detalji</string>
    <string name="title_activity_stats">Statistika vaših donacija</string>
    <string name="title_activity_about">O aplikaciji</string>

    <string name="share_message_template">
        Pošalji SMS poruku na !number! i doniraj !price! u sklopu akcije: !desc!. Više informacija na !web!. Poslato pomoću aplikacije
        "Humanitarni SMS" (https://github.com/somi92/hsms-droid).
    </string>
    <string name="share_chooser_title">
        Podeli putem aplikacije...
    </string>

    <string name="user_email_notification">
        Podaci o svakoj donaciji se šalju servisu radi statističke obrade.
        Vaši podaci se vezuju za svaku donaciju koju realizujete putem aplikacije i neće biti prosleđeni trećim licima i
        kompanijama. E-mail adresa će se koristiti isključivo za slanje informacija o humanitarnim akcijama
        i događajima, kao i zahvalnica za top donatore. Isključite ovu opciju ukoliko želite da vaša donacija bude anonimna
        (e-mail, ime i prezime neće biti deo statistike).
    </string>

    <string name="about_text">
        Humanitarni SMS je mobilna aplikacija za Android platformu koja omogućava korisnicima da u nekoliko dodira ekrana doniraju
        sredstva putem SMS poruke.
        \n
        \nPodaci o humanitarnim akcijama i SMS brojevima preuzimaju se sa veb stranica humanitarnih organizacija i mobilnih operatera
        u Srbiji.
        \n
        \nAplikacija je projekat otvorenog koda pod MIT licencom. Izvorni kod dostupan je na adresi https://github.com/somi92/hsms-droid.
    </string>

    <string name="first_run_notification">
        Podaci o svakoj donaciji se šalju servisu radi statističke obrade.
        Vaši podaci se vezuju za svaku donaciju koju realizujete putem aplikacije i neće biti prosleđeni trećim licima i
        kompanijama. E-mail adresa će se koristiti isključivo za slanje informacija o humanitarnim akcijama
        i događajima, kao i zahvalnica za top donatore. Preskočite ovu opciju ukoliko želite da vaša donacija bude anonimna
        (e-mail, ime i prezime neće biti deo statistike). Ovu opciju je moguće promeniti u bilo kom trenutku u okviru podešavanja
        aplikacije.
    </string>

    <string name="user_data_save_button">Sačuvaj</string>
    <string name="user_data_skip_button">Preskoči</string>

</resources>
