<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="@string/service_settings_screen_key"
        android:title="@string/service_settings_screen_title"
        android:persistent="false">

        <EditTextPreference
            android:key="@string/service_ip_key"
            android:title="@string/service_ip_title"
            android:defaultValue="@string/service_ip_default" />

    </PreferenceScreen>

    <PreferenceScreen
        android:key="@string/user_settings_screen_key"
        android:title="@string/user_settings_screen_title"
        android:persistent="false">

        <SwitchPreference
            android:key="@string/user_data_enabled_key"
            android:title="@string/user_data_enabled_title"
            android:defaultValue="false" />

        <EditTextPreference
            android:key="@string/user_email_key"
            android:title="@string/user_email_title"
            android:dependency="@string/user_data_enabled_key"
            android:defaultValue="" />

        <EditTextPreference
            android:key="@string/user_name_key"
            android:title="@string/user_name_title"
            android:dependency="@string/user_data_enabled_key"
            android:defaultValue="" />

    </PreferenceScreen>

</PreferenceScreen>